# ethotimer

./: Cargo.toml  README.md  build.bat  deploy.sh
.github/: dependabot.yml
.github/workflows/: rust.yml
src/: lib.rs
src/components/: mod.rs  timer_widget.rs
static/: .htaccess  index.html  style.css
