[package]
name = "ethotimer"
version = "0.1.0"
authors = ["Andrew Straw <strawman@astraw.com>"]
edition = "2018"

[lib]
crate-type = ["cdylib"]

[dependencies]
bytesize = "1.1"
log = "0.4"
wasm-logger = "0.2.0"
instant = { version = "0.1", features = [ "wasm-bindgen" ] }
chrono = {version="0.4", features=["serde","wasmbind"]}

yew = "0.18.0"

wasm-bindgen = "^0.2.45"
web-sys = {version="^0.3.52", features=["Blob", "DateTimeValue", "File",
    "FileList", "FileReader", "HtmlInputElement", "Document", "Window", "Location",
    "History", "HtmlAnchorElement", "Element", "CssStyleDeclaration"]}
js-sys = "0.3.50"
wee_alloc = "0.4.5"
serde = { version = "^1.0.127", features = ['derive'] }
futures = "0.3"

[profile.release]  # Attempts to minimize file size
lto = true
opt-level = 'z'
