[package]
name = "ethotimer"
version = "0.1.0"
authors = ["Andrew Straw <strawman@astraw.com>"]
edition = "2018"

[lib]
crate-type = ["cdylib"]

[dependencies]
bytesize = "1.2"
log = "0.4"
wasm-logger = "0.2.0"
instant = { version = "0.1", features = [ "wasm-bindgen" ] }
chrono = {version="0.4", features=["serde","wasmbind"]}

gloo-timers = "0.2.6"
yew = "0.19.3"

wasm-bindgen = "^0.2.45"
js-sys = "0.3.50"
wee_alloc = "0.4.5"
serde = { version = "^1.0.155", features = ['derive'] }
futures = "0.3"

[dependencies.web-sys]
version="0.3.61"
features=[
    "Blob",
    "CssStyleDeclaration",
    "DateTimeValue",
    "Document",
    "Element",
    "File",
    "FileList",
    "FileReader",
    "History",
    "HtmlAnchorElement",
    "HtmlInputElement",
    "Location",
    "Window",
    "Url",
]

[profile.release]  # Attempts to minimize file size
lto = true
opt-level = 'z'
